[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/behavior_tree/behavior_tree_graph/behavior_node/behavior_node.gd" type="Script" id=1]

[node name="BehaviorNode" type="GraphNode"]
margin_right = 90.0
margin_bottom = 79.0
custom_constants/separation = 5
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommentLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 74.0
margin_bottom = 38.0
mouse_filter = 0
autowrap = true

[node name="PropertyEdit" type="LineEdit" parent="."]
margin_left = 16.0
margin_top = 43.0
margin_right = 74.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 25 )
expand_to_text_length = true

[node name="EditButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 73.0
margin_right = 74.0
margin_bottom = 93.0
hint_tooltip = "Edit the group in the editor"
text = "Edit"

[connection signal="focus_exited" from="CommentLabel" to="." method="_on_CommentLabel_focus_exited"]
[connection signal="gui_input" from="CommentLabel" to="." method="_on_CommentLabel_gui_input"]
[connection signal="focus_exited" from="PropertyEdit" to="." method="_on_PropertyEdit_focus_exited"]
[connection signal="text_changed" from="PropertyEdit" to="." method="_on_PropertyEdit_text_changed"]
[connection signal="text_entered" from="PropertyEdit" to="." method="_on_PropertyEdit_text_entered"]
[connection signal="pressed" from="EditButton" to="." method="_on_EditButton_pressed"]
